--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/09_css초기화(네이버,에릭마이어reset 커스텀,스킵네비게이션,css변수)/css/main.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/09_css초기화(네이버,에릭마이어reset 커스텀,스킵네비게이션,css변수)/css/main.css
@@ -25,3 +25,12 @@
   color: var(--txt-color-600);
   font-size: 20px;
 }
+
+/* a태그는 브라우저 기본값이 있으므로 컬러 변경시 반드시 적어야 함. */
+.main_news a {
+  border:2px solid red;
+  color: red;
+}
+textarea {
+  width: 300px;
+}
