--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/27_코리아리서치인터내셔널(반응형,2단가로메뉴,video,css캐싱방지)/css/common.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/27_코리아리서치인터내셔널(반응형,2단가로메뉴,video,css캐싱방지)/css/common.css
@@ -128,7 +128,7 @@ input, select, textarea, button {
 }
 
 /* textarea 리사이즈 막기 */
-textarea {
+#header .gnb {
   resize: none;
 }
 
@@ -145,7 +145,7 @@ body {
 
 body, input, select, textarea, button, table {
   font-family: 'SUIT', '맑은 고딕', 'malgun gothic', 'Apple SD Gothic Neo', sans-serif;
-  font-size: 16px; /* 반응형 때 rem으로 변경 (24.03.14 16:54)*/
+  font-size: 18px; /* 반응형 때 rem으로 변경 (24.03.14 16:54)*/
   color: var(--txt-color-500);
 }
 
@@ -455,20 +455,20 @@ textarea {
 
 /* 버튼 */
 .btn {
-  border:1px solid #666;
-  color:var(--txt-color-600);
+  border: 1px solid #666;
+  color: var(--txt-color-600);
   /* 버튼디자인에 아이콘이 포함된 경우
   글자와 아이콘의 높이가 다르면 inline-flex이용하여 버튼을 좌우배치하고 align-items로 수직정렬해줌 */
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: 50px;
-  padding:0 15px;
+  height: 40px;
+  padding: 0 15px;
   background: none;
 }
 .point_btn1 {
   height: 54px;
-  border:2px solid #222;
+  border: 2px solid #222;
   border-radius: 27px;
   padding:0 28px;
   font-weight: 700;
@@ -476,7 +476,7 @@ textarea {
 }
 .point_btn1:hover {
   background: #222;
-  color:#fff;
+  color: #fff;
 }
 .point_btn1:hover::after {
   background-image: url(../images/btn_arrow_up_white.svg);
