--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/27_코리아리서치인터내셔널(반응형,2단가로메뉴,video,css캐싱방지)/css/main_practice_3.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/27_코리아리서치인터내셔널(반응형,2단가로메뉴,video,css캐싱방지)/css/main_practice_3.css
@@ -194,7 +194,13 @@
   object-fit: cover;
 }
 .main_slider .slider_bottom {
-/* 여기서부터 시작 */
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+.main_slider .slider_bottom img {
+  width: 100%;
 }
 
 /* pc 분기점 */
@@ -240,6 +246,8 @@
   }
 
   #header .m_gnb_wrap {
+        /* .m_gnb_wrap을 오른쪽으로 밀어버림 */
+    transform: translateX(100%); 
     position: fixed;
     right: 0;
     top: 0;
@@ -312,5 +320,21 @@
   }
   #header .m_gnb .depth2 a:hover {
     opacity: 1;
+  }
+}
+
+/* 모바일 분기점 */
+@media (max-width: 767px) {
+  #header .inner {
+    height: 60px;
+  }
+  #header .logo {
+    width: 106px;
+  }
+  #header .logo a {
+    height: 25px;
+  }
+  #header .lang a {
+    /* font-size */
   }
 }
