--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/32_넥슨(가변레이아웃,이미지커지며그림자와fade효과,아이콘공통클래스,한줄말줄임)/css/main.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/32_넥슨(가변레이아웃,이미지커지며그림자와fade효과,아이콘공통클래스,한줄말줄임)/css/main.css
@@ -90,7 +90,6 @@
   height: 100px;
   padding: 0 30px;
   display: flex;
-  /* 기본값 stretch, 안늘어나게 하려면 start */
   /* 두 줄 가운데 정렬 */
   align-content: center;
   flex-wrap: wrap;
@@ -120,15 +119,17 @@
   gap: 60px 24px;
   margin-top: 35px;
 }
-.main_game .game li {
+.main_game .game>li {
   /* 25%로 설정하면 한 줄에 3개의 li만 오기 때문에 gap만큼 뺴주어야 하는데 여기선 24px x 3 =72px이고, columns수 만큼 나눠서 빼야한다. */
   /* 전체 간격 / the number of columns */
   width: calc(25% - 72px / 4);
   /* border: 1px solid blue; */
   /* hover의 transition */
   transition: box-shadow 0.5s;
+  /* .youtube_sns_icon의 기준 */
+  position: relative;
 }
-.main_game .game li:hover {
+.main_game .game>li:hover {
   box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.16);
 }
 .main_game .game .img_wrap {
@@ -150,10 +151,10 @@
 .main_game .game .img_wrap img {
   transition: all 0.2s;
 }
-.main_game .game li:hover .img_wrap::after {
+.main_game .game>li:hover .img_wrap::after {
   opacity: 0;
 }
-.main_game .game li:hover img {
+.main_game .game>li:hover img {
   transform: scale(1.1);
 }
 
@@ -178,6 +179,80 @@
   font-weight: 700;
 }
 
+/* class명에 sns_icon을 포함하는 모든 요소 */
+.main_game .game>li [class*=sns_icon] {
+  /* .main_game .game>li 가 기준 */
+  position: absolute;
+  right: 24px;
+  bottom: 80px;
+}
+.main_game .game .os {
+  position: absolute;
+  bottom: 12px;
+  right: 18px;
+  display: flex;
+  gap: 0 6px;
+}
+.main_game .game .os>li {
+  position: relative;
+}
+.main_game .game .os>li:hover [class*=os_icon] {
+  background-position-x: -50px;
+}
+.main_game .game .os>li:hover .depth2 {
+  opacity: 1;
+  visibility: visible;
+}
+.main_game .game .os .depth2 {
+  position: absolute;
+  left: 50%;
+  top: 34px;
+  transform: translateX(-50%);
+  z-index: 10;
+  background-color: #1b1f24;
+  display: flex;
+  /* 글자 안내려가게 해줌 */
+  white-space: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s;
+}
+.main_game .game .os .depth2 li + li {
+  position: relative;
+}
+.main_game .game .os .depth2 li + li::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  margin-top: -5px;
+  width: 1px;
+  height: 10px;
+  background: rgba(255, 255, 255, 0.2)
+}
+
+.main_game .game .os>li .depth2 a {
+  display: block;
+  color: #737881;
+  padding: 0 10px;
+  line-height: 34px;
+  font-size: 12px;
+  font-weight: 700;
+  transition: all 0.2s;
+}
+.main_game .game .os>li .depth2 a:hover {
+  color: #fff;
+}
+.main_game .game .os .depth2::before {
+  content: '';
+  position: absolute;
+  top: -9px;
+  left: 50%;
+  margin-left: -5px;
+  border: 5px solid transparent;
+  border-bottom-color: #1b1f24;
+}
+
 
 
 /* 분기점 */
@@ -185,7 +260,7 @@
   .main_game .inner {
     width: 954px;
   }
-  .main_game .game li {
+  .main_game .game>li {
     /* 간격 총합 48px / column 수 3개 */
     width: calc(100% / 3 - 16px);
   }
