--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/33_LG그룹(게시판,table,caption,thead,tbody,tfoot,tr,th,td)/css/sub.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/33_LG그룹(게시판,table,caption,thead,tbody,tfoot,tr,th,td)/css/sub.css
@@ -60,7 +60,8 @@
   max-width: 1200px;
   margin: 0 auto;
   border: 1px solid red;
-  height: 800px;
+  height: 900px;
+  position: relative;
 }
 
 /* IR정보 페이지 */
