--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/33_LG그룹(게시판,table,caption,thead,tbody,tfoot,tr,th,td)/css/common.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/33_LG그룹(게시판,table,caption,thead,tbody,tfoot,tr,th,td)/css/common.css
@@ -82,7 +82,8 @@ iframe {
   border: 0;
 }
 
-/* 칸의 선 합치고 간격없애기, 가로를 늘려줌 */
+
+/* 칸의 선 합치고 간격없애기, 가로를 늘려줌, table의 데이터가 길면 늘어나므로 table-layout: fixed;로 크기 고정 */
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -531,19 +532,31 @@ textarea {
   background: url(./assets/images/send.svg) no-repeat 0 0 / 100%;
 }
 
-/* 다운로드 버튼 */
-.download_btn {
-  padding: 7px 3px;
+/* 파일 아이콘 */
+[class*=file_icon] {
   display: inline-block;
-  /* 줄간격으로 인해 기본높이가 커지므로 줄여줌 */
-  line-height: 1;
+  width: 20px;
+  height: 20px;
+  background: url(../images/sprite_pc_new.png) no-repeat;
 }
-.download_btn:hover {
-  border-bottom: 1px solid #000;
+.txt_file_icon {
+  background-position-x: -25px;
 }
-.download_btn:hover [class^='icon_download'] {
-  transform: translateY(-1px);
+.ppt_file_icon {
+  background-position-x: -50px;
 }
+.doc_file_icon {
+  background-position-x: -75px;
+}
+.xls_file_icon {
+  background-position-x: -100px;
+}
+.pdf_file_icon {
+  background-position-x: -125px;
+}
+
+
+
 
 /* 등록하기 아이콘 */
 .reg_icon:after {
@@ -562,6 +575,8 @@ textarea {
   height: 20px;
   text-indent: -9999px;
   background: url(../images/sprite_pc_new.png) no-repeat;
+  /* 하단 간격 없애기 */
+  vertical-align: top;
 }
 .pdf_download_icon {
   background-position-x: -125px;
@@ -636,107 +651,121 @@ textarea {
 caption.nohead {
   position: static;
 }
-
+/* board_list: 게시물 리스트, board_view: 게시물 보기, board_write(게시물 쓰기), board_modify(게시물 수정) */
 /* 게시판 리스트 */
-.board_list_wrap {
+.board_list {
   border-top: 1px solid #000;
 }
-.board_list_wrap th {
-  border-bottom: 1px solid #eee;
+/* 칸에서 수직 정렬이 기본값이며 vertical-align: top 등으로 수직정렬 변경 가능 */
+.board_list th {
   height: 60px;
+  font-weight: 500;
+  color: var(--txt-color-600);
   background: #f5f5f5;
-  color: #000;
-  font-weight: 400;
-}
-.board_list_wrap td {
   border-bottom: 1px solid #eee;
+}
+.board_list td {
   height: 60px;
+  border-bottom: 1px solid #eee;
   text-align: center;
 }
-.board_list_wrap .td_left {
+.board_list .td_left {
   text-align: left;
 }
-.board_list_wrap tr:last-child td {
-  border-bottom-color: #ddd;
+.board_list tr:last-child td {
+  border-bottom: 1px solid #ddd;
 }
-.board_list_wrap .col01 {
-  width: 10%;
+/* 표의 칸이 3칸일 경우 두칸만 길이를 정하면 나머지 한칸은 알아서 정해짐 */
+.board_list .col1 {
+  width: 9%;
 }
-.board_list_wrap .col03 {
-  width: 15%;
+.board_list .col3 {
+  width: 13%;
 }
-.board_list_wrap .link {
-  /* 한줄말줄임 - IE대응 */
-  /* 글자 안내려가게 */
-  white-space: nowrap;
-  /* 인라인블럭으로 지정하여 100%가 되지않게 */
+
+/* display: -webkit-box는 가로가 100%이므로 빈 공간도 클릭됨 */
+/* .board_list .link_btn {
+  border: 1px solid red;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+} */
+/* 빈 공간 클릭이 안되도록 한줄 말줄임 */
+.board_list .link_btn {
+  /* 표를 글자 만큼 선택 */
   display: inline-block;
-  /* 자신이 가질수있는 최대크기지정 */
-  max-width: 90%;
+  white-space: nowrap;
+  /* width: 100%를 하면 block element와 다를게 없어지기 때문에 내용에 영향을 받는 max-width를 이용 */
+  max-width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.board_list_wrap .link:hover {
-  text-decoration: underline;
+
+/* a태그에 줄간격, 폰트관련 기본값이 상속되며 최소크기가 지정되어 줄어들지 않으면 크기를 직접 지정 */
+.board_list .download_btn {
+  padding: 7px 3px;
+  display: inline-block;
+  height: 34px;
+}
+.board_list .download_btn:hover {
+  border-bottom: 1px solid #000;
 }
 
-/* 게시판 페이지네이션 */
-.board_pagination_wrap {
+/* 페이지네이션 */
+.board_pagination {
   margin-top: 20px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
-.board_pagination_wrap .board_pagination {
+.board_pagination .page_btn {
   display: inline-block;
-  vertical-align: top;
-}
-.board_pagination_wrap .btn_paging {
-  float: left;
   width: 22px;
   height: 40px;
-  text-indent: -9999px;
-  position: relative;
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.board_pagination_wrap .btn_paging:before {
+.board_pagination .page_btn::before {
   content: '';
-  position: absolute;
-  left: 50%;
-  top: 50%;
+  background: url(../images/sprite_pc.png) no-repeat ;
   width: 14px;
   height: 14px;
-  transform: translate(-50%, -50%);
-  background: url(../images/sprite_pc.png) no-repeat;
+  /* border: 1px solid black; */
 }
-.board_pagination_wrap .first:before {
+.board_pagination .first::before {
   background-position: -397px -310px;
 }
-.board_pagination_wrap .prev:before {
+.board_pagination .prev::before {
   width: 8px;
   background-position: -369px -182px;
 }
-.board_pagination_wrap .next:before {
+.board_pagination .next::before {
   width: 8px;
   background-position: -30px -431px;
 }
-.board_pagination_wrap .last:before {
+.board_pagination .last::before {
   background-position: -443px -388px;
 }
-.board_pagination_wrap .prev {
-  margin-right: 8px;
+.board_pagination .prev {
+  margin-right: 13px;
 }
-.board_pagination_wrap .next {
-  margin-left: 8px;
+.board_pagination .next {
+  margin-left: 13px;
 }
-.board_pagination_wrap .btn_num {
-  border: 1px solid #eee;
-  float: left;
+.board_pagination .num {
   width: 40px;
   line-height: 38px;
-  margin: 0 5px;
-  color: #777;
+  text-align: center;
+  border: 1px solid #eee;
 }
-.board_pagination_wrap .btn_num.active {
-  background: #bb0841;
-  border-color: #bb0841;
+.board_pagination .num + .num {
+  margin-left: 10px;
+}
+.board_pagination .active {
+  border: var(--point--color1);
+  background: var(--point--color1);
   color: #fff;
 }
 
