--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유튜바이오(반응형,2단세로메뉴,openwax,js구현)/css/common.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유튜바이오(반응형,2단세로메뉴,openwax,js구현)/css/common.css
@@ -144,7 +144,7 @@ body {
 
 /*********************** 공통스타일 *************************/
 /* body에 높이가 없어도 hidden이 걸리면 스크롤바가 사라짐(데스크탑) */
-/* body.on {overflow: hidden;} */
+body.on {overflow: hidden;}
 /* iOS 사파리는 페이지최상단에서만 hidden이 걸리므로 페이지 위로 올라오게함(모바일,반응형) 즉 ios에서 어쩔 수 없이 쓰려면 아래 코드 사용. */
 /* body.on { overflow: hidden; position: fixed; left:0; top:0; width:100%; } */
 
@@ -179,13 +179,15 @@ body, input, select, textarea, button, table {
 }
 
 /* 스크롤바 */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 10px; 
-  background: #efefef;
+  background: #f5f5f5;
 }
 ::-webkit-scrollbar-thumb {
-  background: #999;
-} */
+  background: #ccc;
+  border: 2px solid #fff;
+  border-radius: 5px;
+}
 
 
 
@@ -471,34 +473,28 @@ textarea {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: 40px;
+  line-height: 40px;
   padding: 0 15px;
   background: none;
 }
-.point_btn1 {
-  height: 54px;
-  border: 2px solid #222;
-  border-radius: 27px;
-  padding:0 28px;
-  font-weight: 700;
-  transition: all 0.5s;
-}
-.point_btn1:hover {
-  background: #222;
-  color: #fff;
-}
-.point_btn1:hover::after {
-  background-image: url(../images/btn_arrow_up_white.svg);
-}
-.point_btn1::after {
-  content: '';
-  transition: all 0.5s;
-  width:24px;
-  height: 24px;
-  background: url(../images/btn_arrow_up.svg) no-repeat 0 0 / 100%;
-  margin-left:5px;
-}
 
+.point1_btn {
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  border: none;
+  width: 200px;
+  line-height: 60px;
+  border-radius: 30px;
+  background: linear-gradient(-30deg, #2AD47D, #008A43);
+}
+.point1_btn::after {
+  content: '';
+  width: 17px;
+  height: 17px;
+  background: url(../images/icon_plus.svg);
+  margin-left: 10px;
+}
 
 /* 라벨 버튼 */
 [class*='label_btn'] {
