--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/10_롯데스윗몰(슬라이더옆에텍스트있는타입,centermode,100퍼슬라이더)/css/main.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/10_롯데스윗몰(슬라이더옆에텍스트있는타입,centermode,100퍼슬라이더)/css/main.css
@@ -13,13 +13,16 @@
 
 .main_new {
   padding-top: 80px;
+  position: relative;
 }
+
 .main_new .inner {
   width: 1280px;
-  height: 300px;
   margin: 0 auto;
   position: relative;
-  border: 1px solid red;
+  /* border: 1px solid red; */
+  display: flex;
+  justify-content: flex-end;
 }
 .main_tit h2 {
   font-size: 40px;
@@ -65,57 +68,128 @@
   transition: all 0.3s;
 }
 
+.main_new::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: calc(50% + 640px);
+  height: 100%;
+  background: #fff;
+  z-index: 10;
+}
 .main_new .main_tit {
   position: absolute;
   left: 0;
   top: 0;
   width: 320px;
-  height: 100%;
-  /* height: 220px; */
-  border: 1px solid black;
+  height: calc(100% - 10px);
+  /* border: 1px solid black; */
+  background: #fff;
+  z-index: 10;
 }
 
 .main_new .swiper {
-  width: 950px;
-  height: 100%;
-  margin-left: 320px;
-  border: 10px solid blueviolet;
-}
-.main_new .swiper .bg {
-  border: 1px solid red;
-  border-radius: 50%;
-  background: rgba(0,0,0,0.4);
-  width: 100%;
-  height: 214px;
-  /* display: none; */
-  position: absolute;
-}
-.main_new .swiper:hover .bg {
-  display: block;
+  width: 960px;
+  margin: 0;
+  /* border: 5px solid blueviolet; */
+  /* 넘어가는 항목 강제로 보이게 함 */
+  overflow: visible;
+  /* scroll bar 아래로 내리기 */
+  padding-bottom: 80px;
 }
 .main_new .swiper-slide {
   width: 214px;
-  height: 214px;
-  background-color: #f5f5f5;
-  position: relative;
+}
+.main_new .swiper-slide a {
+  display: block;
+  overflow: hidden;
   border-radius: 50%;
-  border: 1px solid black;
-  margin-right: 30px;
+  /* 안쪽 position 요소를 가리기 위해 기준 설정 */
+  position: relative;
+}
+.main_new .swiper-slide .bg {
+  /* border: 1px solid red; */
+  background-color: #f5f5f5;
+  height: 214px;
+  border-radius: 50%;
+}
+.main_new .swiper-slide .img_wrap {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 0.5s;
+  opacity: 0;
+  height: 100%;
+  /* border: 2px solid red; */
+}
+.main_new .swiper-slide .img_wrap img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .main_new .txt_wrap {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 0;
+  top: 0;
   text-align: center;
+  /* position: absolute일때 width, height지정하지 않으면 크기가 줄어듬 */
+  width: 100%;
+  height: 100%;
   color: #fff;
   font-size: 16px;
+  padding: 0 20px;
+  opacity: 0;
+  transition: all 0.5s;
+  background: rgba(0,0,0,0.4);
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.main_new .txt_wrap p {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+  word-break: keep-all;
+  word-wrap: break-word;
   line-height: 20px;
-  transform: translate(-50%, -50%);
-  padding-bottom: 40px;
+  margin-bottom: 10px;
 }
-.main_new .txt_wrap p {
-  margin-bottom: 30px;
+.main_new .swiper-slide .cover {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: #f5f5f5;
+  transition: all 0.5s;
+}
+.main_new .swiper-slide .cover img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.main_new .swiper-slide:hover .img_wrap {
+  opacity: 1;
+}
+.main_new .swiper-slide:hover .txt_wrap {
+  opacity: 1;
+}
+.main_new .swiper-slide:hover .cover {
+  transform: translateX(-100%);
+}
+
+/* swiper scroll bar customization */
+.main_new .swiper-scrollbar {
+  width: 1280px;
+  left: -320px;
+  height: 1px;
+}
+.main_new .swiper-scrollbar-drag {
+  height: 3px;
+  background: var(--point--color1);
+  top: -2px;
 }
