--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/10_롯데스윗몰(슬라이더옆에텍스트있는타입,centermode,100퍼슬라이더)/css/main.css
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/10_롯데스윗몰(슬라이더옆에텍스트있는타입,centermode,100퍼슬라이더)/css/main.css
@@ -193,3 +193,75 @@
   background: var(--point--color1);
   top: -2px;
 }
+
+/* 메인 인기상품 */
+.main_popular {
+  padding: 130px 0;
+}
+.main_popular .main_tit {
+  text-align: center;
+}
+/* swiper-wrapper를 css로 건들면 절대 안됨!! */
+.main_popular .swiper {
+  /* border: 1px solid red; */
+  /* slide 이동시 a태그가 위로 이동하므로 공간 확보 */
+  padding: 160px 0 30px;
+}
+.main_popular .swiper-slide {
+  width: 390px;
+}
+.main_popular .swiper-slide a {
+  display: block;
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+  border-radius: 60px;
+  transition: all 0.8s;
+}
+/* active일때 자동으로 클래스가 변경됨, active일때 box-shadow 적용 */
+/* swiper-slide를 직접 위치 변경하면 망가지기 때문에 안쪽 요소를 위치 변경하기 */
+.main_popular .swiper-slide-active a {
+  box-shadow: 0 20px 40px 1px rgba(0,0,0,0.2);
+  transform: translateY(-120px);
+}
+.main_popular .swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.main_popular .swiper-slide .txt_wrap {
+  opacity: 0;
+  transition: all 0.3s;
+}
+.main_popular .swiper-slide-active .txt_wrap {
+  opacity: 1;
+  margin-top: -60px;
+}
+.main_popular .swiper-slide .txt_wrap strong {
+  /* strong은 inline이라 center안됨 */
+  display: block;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+}
+.main_popular .swiper-slide .txt_wrap p {
+  text-align: center;
+  font-size: 20px;
+  color: var(--txt-color-400);
+  margin-top: 20px;
+}
+
+.main_popular .swiper-scrollbar {
+  width: 1280px;
+  height: 1px;
+  background: #e5e5e5;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.main_popular .swiper-scrollbar-drag {
+  height: 3px;
+  background: var(--point--color1);
+  top: -2px;
+  border-radius: 0;
+}
